# SpaceRider

./: .gitignore  AsteroidLogic.cpp  AsteroidLogic.h  AsteroidPresentation.cpp  AsteroidPresentation.h  CMakeLists.txt  Collision.cpp  Collision.h  CollisionDetection.cpp  CollisionDetection.h  CreateWindow.cpp  CreateWindow.h  EnemyBulletLogic.cpp  EnemyBulletLogic.h  EnemyBulletPresentation.cpp  EnemyBulletPresentation.h  EnemyLogic.cpp  EnemyLogic.h  EnemyPresentation.cpp  EnemyPresentation.h  ExplosionPresentation.cpp  ExplosionPresentation.h  FinalWindow.cpp  FinalWindow.h  GameCommonData.h  GameLogic.cpp  GameLogic.h  GamePresentation.cpp  GamePresentation.h  GameWindow.cpp  GameWindow.h  IBullet.h  IEnemy.cpp  IEnemy.h  IEnemyBullet.cpp  IEnemyBullet.h  IGameCharacter.cpp  IGameCharacter.h  IMovingGameObject.h  IPlayer.cpp  (+41 more)
Debug/: AsteroidLogic.cpp.o.d  AsteroidPresentation.cpp.o.d  Collision.cpp.o.d  CollisionDetection.cpp.o.d  CreateWindow.cpp.o.d  EnemyBulletLogic.cpp.o.d  EnemyBulletPresentation.cpp.o.d  EnemyLogic.cpp.o.d  EnemyPresentation.cpp.o.d  ExplosionPresentation.cpp.o.d  FinalWindow.cpp.o.d  GameLogic.cpp.o.d  GamePresentation.cpp.o.d  GameWindow.cpp.o.d  IBullet.cpp.o.d  IEnemy.cpp.o.d  IEnemyBullet.cpp.o.d  IGameCharacter.cpp.o.d  IMovingGameObject.cpp.o.d  IPlayer.cpp.o.d  IntroductionWindow.cpp.o.d  LaserGeneratorLogic.cpp.o.d  LaserGeneratorPresentation.cpp.o.d  LifeLogic.cpp.o.d  LifePresentation.cpp.o.d  PlayerBullet.cpp.o.d  PlayerBulletPresentation.cpp.o.d  PlayerLogic.cpp.o.d  PlayerPresentation.cpp.o.d  RenderWindow.cpp.o.d  SatelliteLogic.cpp.o.d  SatellitePresentation.cpp.o.d  Score.cpp.o.d  ScoreDatabase.cpp.i  ScoreDatabase.cpp.o.d  ScorePresentation.cpp.o.d  SpaceRiderTests.cpp.o.d  TESTING-LIFE-INDICATOR.cpp.o.d  Testing-Score-Presentation.cpp.o.d  TestingEnemyLayers.cpp.o.d  (+2 more)
Debug/Licenses/: Licenses List.txt
Doxygen/html/: _asteroid_logic_8cpp.html  _asteroid_logic_8cpp__incl.map  _asteroid_logic_8cpp__incl.md5  _asteroid_logic_8h.html  _asteroid_logic_8h__dep__incl.map  _asteroid_logic_8h__dep__incl.md5  _asteroid_logic_8h__incl.map  _asteroid_logic_8h__incl.md5  _asteroid_logic_8h_source.html  _asteroid_presentation_8cpp.html  _asteroid_presentation_8cpp__incl.map  _asteroid_presentation_8cpp__incl.md5  _asteroid_presentation_8h.html  _asteroid_presentation_8h__dep__incl.map  _asteroid_presentation_8h__dep__incl.md5  _asteroid_presentation_8h__incl.map  _asteroid_presentation_8h__incl.md5  _asteroid_presentation_8h_source.html  _collision_detection_8cpp.html  _collision_detection_8cpp__incl.map  _collision_detection_8cpp__incl.md5  _collision_detection_8h.html  _collision_detection_8h.js  _collision_detection_8h__dep__incl.map  _collision_detection_8h__dep__incl.md5  _collision_detection_8h__incl.map  _collision_detection_8h__incl.md5  _collision_detection_8h_source.html  _enemy_bullet_logic_8cpp.html  _enemy_bullet_logic_8cpp__incl.map  _enemy_bullet_logic_8cpp__incl.md5  _enemy_bullet_logic_8h.html  _enemy_bullet_logic_8h__dep__incl.map  _enemy_bullet_logic_8h__dep__incl.md5  _enemy_bullet_logic_8h__incl.map  _enemy_bullet_logic_8h__incl.md5  _enemy_bullet_logic_8h_source.html  _enemy_bullet_presentation_8cpp.html  _enemy_bullet_presentation_8cpp__incl.map  _enemy_bullet_presentation_8cpp__incl.md5  (+1124 more)
Doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_8.js  files_a.js  functions_0.js  functions_1.js  (+20 more)
Doxygen/latex/: _asteroid_logic_8cpp.tex  _asteroid_logic_8cpp.tex.tmp  _asteroid_logic_8cpp__incl.md5  _asteroid_logic_8h.tex  _asteroid_logic_8h__dep__incl.md5  _asteroid_logic_8h__incl.md5  _asteroid_presentation_8cpp.tex  _asteroid_presentation_8cpp__incl.md5  _asteroid_presentation_8h.tex  _asteroid_presentation_8h__dep__incl.md5  _asteroid_presentation_8h__incl.md5  _collision_detection_8cpp.tex  _collision_detection_8cpp__incl.md5  _collision_detection_8h.tex  _collision_detection_8h__dep__incl.md5  _collision_detection_8h__incl.md5  _enemy_bullet_logic_8cpp.tex  _enemy_bullet_logic_8cpp__incl.md5  _enemy_bullet_logic_8h.tex  _enemy_bullet_logic_8h__dep__incl.md5  _enemy_bullet_logic_8h__incl.md5  _enemy_bullet_presentation_8cpp.tex  _enemy_bullet_presentation_8cpp__incl.md5  _enemy_bullet_presentation_8h.tex  _enemy_bullet_presentation_8h__dep__incl.md5  _enemy_bullet_presentation_8h__incl.md5  _enemy_logic_8cpp.tex  _enemy_logic_8cpp__incl.md5  _enemy_logic_8h.tex  _enemy_logic_8h__dep__incl.md5  _enemy_logic_8h__incl.md5  _enemy_presentation_8cpp.tex  _enemy_presentation_8cpp__incl.md5  _enemy_presentation_8h.tex  _enemy_presentation_8h__dep__incl.md5  _enemy_presentation_8h__incl.md5  _final_window_8cpp.tex  _final_window_8cpp__incl.md5  _final_window_8h.tex  _final_window_8h__dep__incl.md5  (+517 more)
TestSorceCode/: SpaceRiderTests.cpp
game-source-code/: AsteroidPresentation.h  CollisionDetection.cpp  EnemyBulletLogic.cpp  EnemyBulletPresentation.h  EnemyPresentation.cpp  EnemyPresentation.h  ExplosionPresentation.cpp  ExplosionPresentation.h  FinalWindow.h  FireAnimation.cpp  FireAnimation.h  GameCommonData.h  GameLogic.h  GameWindow.cpp  GameWindow.h  IBullet.h  IEnemy.h  IMovingGameObject.cpp  IMovingGameObject.h  IPlayer.h  IntroductionWindow.h  LaserGeneratorPresentation.h  LifeLogic.cpp  LifeLogic.h  LifePresentation.h  PlayerBullet.h  PlayerBulletPresentation.h  PlayerLogic.cpp  PlayerPresentation.cpp  PlayerPresentation.h  SatelliteLogic.cpp  SatelliteLogic.h  SatellitePresentation.cpp  SatellitePresentation.h  Score.cpp  Score.h  ScoreDatabase.cpp  ScoreDatabase.h  ScorePresentation.cpp  ScorePresentation.h  (+2 more)
