cmake_minimum_required(VERSION 3.8)
project(SpaceRiderProject)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        Debug/doctest.h
        include/SFML/Audio/AlResource.hpp
        include/SFML/Audio/Export.hpp
        include/SFML/Audio/InputSoundFile.hpp
        include/SFML/Audio/Listener.hpp
        include/SFML/Audio/Music.hpp
        include/SFML/Audio/OutputSoundFile.hpp
        include/SFML/Audio/Sound.hpp
        include/SFML/Audio/SoundBuffer.hpp
        include/SFML/Audio/SoundBufferRecorder.hpp
        include/SFML/Audio/SoundFileFactory.hpp
        include/SFML/Audio/SoundFileReader.hpp
        include/SFML/Audio/SoundFileWriter.hpp
        include/SFML/Audio/SoundRecorder.hpp
        include/SFML/Audio/SoundSource.hpp
        include/SFML/Audio/SoundStream.hpp
        include/SFML/Graphics/BlendMode.hpp
        include/SFML/Graphics/CircleShape.hpp
        include/SFML/Graphics/Color.hpp
        include/SFML/Graphics/ConvexShape.hpp
        include/SFML/Graphics/Drawable.hpp
        include/SFML/Graphics/Export.hpp
        include/SFML/Graphics/Font.hpp
        include/SFML/Graphics/Glyph.hpp
        include/SFML/Graphics/Image.hpp
        include/SFML/Graphics/PrimitiveType.hpp
        include/SFML/Graphics/Rect.hpp
        include/SFML/Graphics/RectangleShape.hpp
        include/SFML/Graphics/RenderStates.hpp
        include/SFML/Graphics/RenderTarget.hpp
        include/SFML/Graphics/RenderTexture.hpp
        include/SFML/Graphics/RenderWindow.hpp
        include/SFML/Graphics/Shader.hpp
        include/SFML/Graphics/Shape.hpp
        include/SFML/Graphics/Sprite.hpp
        include/SFML/Graphics/Text.hpp
        include/SFML/Graphics/Texture.hpp
        include/SFML/Graphics/Transform.hpp
        include/SFML/Graphics/Transformable.hpp
        include/SFML/Graphics/Vertex.hpp
        include/SFML/Graphics/VertexArray.hpp
        include/SFML/Graphics/View.hpp
        include/SFML/Network/Export.hpp
        include/SFML/Network/Ftp.hpp
        include/SFML/Network/Http.hpp
        include/SFML/Network/IpAddress.hpp
        include/SFML/Network/Packet.hpp
        include/SFML/Network/Socket.hpp
        include/SFML/Network/SocketHandle.hpp
        include/SFML/Network/SocketSelector.hpp
        include/SFML/Network/TcpListener.hpp
        include/SFML/Network/TcpSocket.hpp
        include/SFML/Network/UdpSocket.hpp
        include/SFML/System/Clock.hpp
        include/SFML/System/Err.hpp
        include/SFML/System/Export.hpp
        include/SFML/System/FileInputStream.hpp
        include/SFML/System/InputStream.hpp
        include/SFML/System/Lock.hpp
        include/SFML/System/MemoryInputStream.hpp
        include/SFML/System/Mutex.hpp
        include/SFML/System/NonCopyable.hpp
        include/SFML/System/Sleep.hpp
        include/SFML/System/String.hpp
        include/SFML/System/Thread.hpp
        include/SFML/System/ThreadLocal.hpp
        include/SFML/System/ThreadLocalPtr.hpp
        include/SFML/System/Time.hpp
        include/SFML/System/Utf.hpp
        include/SFML/System/Vector2.hpp
        include/SFML/System/Vector3.hpp
        include/SFML/Window/Context.hpp
        include/SFML/Window/ContextSettings.hpp
        include/SFML/Window/Event.hpp
        include/SFML/Window/Export.hpp
        include/SFML/Window/GlResource.hpp
        include/SFML/Window/Joystick.hpp
        include/SFML/Window/Keyboard.hpp
        include/SFML/Window/Mouse.hpp
        include/SFML/Window/Sensor.hpp
        include/SFML/Window/Touch.hpp
        include/SFML/Window/VideoMode.hpp
        include/SFML/Window/Window.hpp
        include/SFML/Window/WindowHandle.hpp
        include/SFML/Window/WindowStyle.hpp
        include/SFML/Audio.hpp
        include/SFML/Config.hpp
        include/SFML/Graphics.hpp
        include/SFML/Main.hpp
        include/SFML/Network.hpp
        include/SFML/OpenGL.hpp
        include/SFML/System.hpp
        include/SFML/Window.hpp
        include/doctest.h
        lib/doctest.h
        SFML/Audio/AlResource.hpp
        SFML/Audio/Export.hpp
        SFML/Audio/InputSoundFile.hpp
        SFML/Audio/Listener.hpp
        SFML/Audio/Music.hpp
        SFML/Audio/OutputSoundFile.hpp
        SFML/Audio/Sound.hpp
        SFML/Audio/SoundBuffer.hpp
        SFML/Audio/SoundBufferRecorder.hpp
        SFML/Audio/SoundFileFactory.hpp
        SFML/Audio/SoundFileReader.hpp
        SFML/Audio/SoundFileWriter.hpp
        SFML/Audio/SoundRecorder.hpp
        SFML/Audio/SoundSource.hpp
        SFML/Audio/SoundStream.hpp
        SFML/Graphics/BlendMode.hpp
        SFML/Graphics/CircleShape.hpp
        SFML/Graphics/Color.hpp
        SFML/Graphics/ConvexShape.hpp
        SFML/Graphics/Drawable.hpp
        SFML/Graphics/Export.hpp
        SFML/Graphics/Font.hpp
        SFML/Graphics/Glyph.hpp
        SFML/Graphics/Image.hpp
        SFML/Graphics/PrimitiveType.hpp
        SFML/Graphics/Rect.hpp
        SFML/Graphics/RectangleShape.hpp
        SFML/Graphics/RenderStates.hpp
        SFML/Graphics/RenderTarget.hpp
        SFML/Graphics/RenderTexture.hpp
        SFML/Graphics/RenderWindow.hpp
        SFML/Graphics/Shader.hpp
        SFML/Graphics/Shape.hpp
        SFML/Graphics/Sprite.hpp
        SFML/Graphics/Text.hpp
        SFML/Graphics/Texture.hpp
        SFML/Graphics/Transform.hpp
        SFML/Graphics/Transformable.hpp
        SFML/Graphics/Vertex.hpp
        SFML/Graphics/VertexArray.hpp
        SFML/Graphics/View.hpp
        SFML/Network/Export.hpp
        SFML/Network/Ftp.hpp
        SFML/Network/Http.hpp
        SFML/Network/IpAddress.hpp
        SFML/Network/Packet.hpp
        SFML/Network/Socket.hpp
        SFML/Network/SocketHandle.hpp
        SFML/Network/SocketSelector.hpp
        SFML/Network/TcpListener.hpp
        SFML/Network/TcpSocket.hpp
        SFML/Network/UdpSocket.hpp
        SFML/System/Clock.hpp
        SFML/System/Err.hpp
        SFML/System/Export.hpp
        SFML/System/FileInputStream.hpp
        SFML/System/InputStream.hpp
        SFML/System/Lock.hpp
        SFML/System/MemoryInputStream.hpp
        SFML/System/Mutex.hpp
        SFML/System/NonCopyable.hpp
        SFML/System/Sleep.hpp
        SFML/System/String.hpp
        SFML/System/Thread.hpp
        SFML/System/ThreadLocal.hpp
        SFML/System/ThreadLocalPtr.hpp
        SFML/System/Time.hpp
        SFML/System/Utf.hpp
        SFML/System/Vector2.hpp
        SFML/System/Vector3.hpp
        SFML/Window/Context.hpp
        SFML/Window/ContextSettings.hpp
        SFML/Window/Event.hpp
        SFML/Window/Export.hpp
        SFML/Window/GlResource.hpp
        SFML/Window/Joystick.hpp
        SFML/Window/Keyboard.hpp
        SFML/Window/Mouse.hpp
        SFML/Window/Sensor.hpp
        SFML/Window/Touch.hpp
        SFML/Window/VideoMode.hpp
        SFML/Window/Window.hpp
        SFML/Window/WindowHandle.hpp
        SFML/Window/WindowStyle.hpp
        SFML/Audio.hpp
        SFML/Config.hpp
        SFML/Graphics.hpp
        SFML/Main.hpp
        SFML/Network.hpp
        SFML/OpenGL.hpp
        SFML/System.hpp
        SFML/Window.hpp
        AsteroidLogic.cpp
        AsteroidLogic.h
        AsteroidPresentation.cpp
        AsteroidPresentation.h
        CollisionDetection.cpp
        CollisionDetection.h
        EnemyBulletLogic.cpp
        EnemyBulletLogic.h
        EnemyBulletPresentation.cpp
        EnemyBulletPresentation.h
        EnemyLogic.cpp
        EnemyLogic.h
        EnemyPresentation.cpp
        EnemyPresentation.h
        FinalWindow.cpp
        FinalWindow.h
        GameCommonData.h
        GameLogic.cpp
        GameLogic.h
        GamePresentation.cpp
        GamePresentation.h
        GameWindow.cpp
        GameWindow.h
        IBullet.cpp
        IBullet.h
        IEnemy.cpp
        IEnemy.h
        IMovingGameObject.cpp
        IMovingGameObject.h
        IntroductionWindow.cpp
        IntroductionWindow.h
        IPlayer.cpp
        IPlayer.h
        LaserGeneratorLogic.cpp
        LaserGeneratorLogic.h
        LaserGeneratorPresentation.cpp
        LaserGeneratorPresentation.h
        LifeLogic.cpp
        LifeLogic.h
        LifePresentation.cpp
        LifePresentation.h
        main.cpp
        PlayerBullet.cpp
        PlayerBullet.h
        PlayerBulletPresentation.cpp
        PlayerBulletPresentation.h
        PlayerLogic.cpp
        PlayerLogic.h
        PlayerPresentation.cpp
        PlayerPresentation.h
        SatelliteLogic.cpp
        SatelliteLogic.h
        SatellitePresentation.cpp
        SatellitePresentation.h
        Score.cpp
        Score.h
        ScoreDatabase.cpp
        ScoreDatabase.h
        ScorePresentation.cpp
        ScorePresentation.h
        SpaceRiderTests.cpp)

add_executable(SpaceRiderProject ${SOURCE_FILES})